test of double scroll fix

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -16,7 +16,8 @@ a:hover {
 }
 
 body {
-    overflow-x: hidden;
     width: 100vw;
+    max-height: 100vh;
+    overflow: hidden;
 }
 
